--- a/src/docs/asciidoc/slides/thanks.adoc
+++ b/src/docs/asciidoc/slides/thanks.adoc
@@ -23,3 +23,15 @@ JavaScript has been, and is being profoundly changed, *for the better*
 
 It's not COBOL any more
 --
+
+== Further reading
+
+* The ECMAScript http://github.com/tc39/[Github repo], especially the http://github.com/tc39/proposals[proposals]
+
+* https://kangax.github.io/compat-table/es6/[ECMAScript compatibility page] tracks the standards
+
+* Accessible yet detailed, http://2tality.com[Axel Rauschmayer] is in a league of his own.  His http://exploringjs.com/es6.html[Exploring ES6] and http://exploringjs.com/es2016-es2017.html[Exploring ES2016 and ES2017] are great.
+
+* Not about ES6 per se, https://leanpub.com/javascriptallongesix[JavaScript Allonge] is a lovely book.
+
+* The https://github.com/jezhiggins/mango.js[Iteration with generators] and https://github.com/jezhiggins/es6-simple-coroutines[Coroutines] code shown in this talk.
